--- a/index.html
+++ b/index.html
@@ -25,24 +25,87 @@
 
     <section id="home">
         <div class="intro">
-            <h1>Hi, I'm [Your Name]</h1>
-            <p>Welcome to my personal website! I'm a [Your Profession] with a passion for [Your Interests]. I create, innovate, and strive to make the digital world a better place.</p>
+            <h1>Hi, I'm Neil Javiya</h1>
+            <p>
+                Dynamic and results-driven professional with a robust foundation in Business Analytics and Project Management,
+                fortified by a Bachelor's in Computer Engineering. I proficiently leverage a diverse skill set, showcasing adeptness
+                in operational consultancy and adept leadership in project endeavors. Recognized for excelling in hackathons, contributing
+                significantly to open-source projects, and currently pursuing certifications in CAPM to further enhance my expertise.
+            </p>
         </div>
     </section>
+
 
     <section id="education">
         <h2>Education</h2>
         <div class="education-cards">
-            <!-- Education details from your resume will go here as cards -->
+            <div class="card">
+                <h3>Post Graduate Certificate - Business Analytics</h3>
+                <p>Seneca Polytechnic, Toronto, ON | May 2023 - Dec 2023</p>
+                <ul>
+                    <li>GPA: 4.0/4.0, Graduated with High Honours, President's Honours List</li>
+                    <li>Key Courses: Sentiment Analysis, Data Mining, Prediction Models, SAS, Python</li>
+                    <li>Achievements: Awarded President's Honours List for both semesters</li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3>Post Graduate Certificate - IT Project Management</h3>
+                <p>Seneca Polytechnic, Toronto, ON | May 2022 - Dec 2022</p>
+                <ul>
+                    <li>GPA: 3.8/4.0</li>
+                    <li>Key Courses: Project Management Tools, Finance for Project Managers, IT Project Management</li>
+                    <li>Achievements: Awarded President's Honours List in the first semester</li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3>Bachelor of Engineering (B.E.) - Computer Engineering</h3>
+                <p>Gujarat Technological University, Rajkot | Aug 2017 - Jul 2021</p>
+                <ul>
+                    <li>Key Courses: Programming in C, C++, Java, C#, Software and Application Development, Digital Electronics</li>
+                </ul>
+            </div>
         </div>
     </section>
+
 
     <section id="experience-projects">
         <h2>Experience & Projects</h2>
         <div class="experience-cards">
-            <!-- Experience and project details from your resume will go here as cards -->
+            <div class="card">
+                <h3>Director, Operations</h3>
+                <p>Seneca Housing Hackathon, Seneca Polytechnic, Toronto, ON | Oct 2023 – Mar 2024</p>
+                <p>
+                    Worked with the team on event planning, merchandise planning, judging rubrics, registrations, and catering.
+                    Responsible for team task assignment and KPI tracking for performance.
+                </p>
+            </div>
+            <div class="card">
+                <h3>Assistant to the Manager & Concierge</h3>
+                <p>MTCC590, Toronto, ON | Jun 2023 - Present</p>
+                <p>
+                    Handled file work including meeting minutes, invoices, board resolutions, payroll, and monthly statements
+                    for the Property Manager. Managed the reception desk and executed access control, complaint logging,
+                    and communication with superintendent and property manager for emergencies.
+                </p>
+            </div>
+            <div class="card">
+                <h3>Director, Operations</h3>
+                <p>ThinkingNorth Smart Cities Hackathon, Seneca Polytechnic, Toronto, ON | Nov 2022 - May 2023</p>
+                <p>
+                    Managed a 10-member Operations team, coordinating event logistics, registrations, merchandise, and catering.
+                </p>
+            </div>
+            <div class="card">
+                <h3>Jr. Application Developer</h3>
+                <p>Vishwakarma Global Education Services Pvt Ltd, Pune | Feb 2021 - Jul 2021</p>
+                <p>
+                    Worked on backend development, handled challenges with technologies like Vue.js and Flutter,
+                    conducted testing and communication duties.
+                </p>
+            </div>
         </div>
     </section>
+
 
     <section id="blog">
         <h2>Blog</h2>
@@ -58,11 +121,12 @@
             <button type="submit">Send Message</button>
         </form>
         <div class="contact-details">
-            <p>Email: [Your Email]</p>
-            <p>Phone: [Your Phone Number]</p>
+            <p>Email: neiljaviya4@gmail.com</p>
+            <p>Phone: +1 (437) - 262 - 6345</p>
             <!-- Add your social links here -->
         </div>
     </section>
+
 
     <script src="scripts.js"></script>
 </body>
