--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <nav>
 	    <div class="logo">Neil Javiya</div>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="education.html">Education</a></li>
-                <li><a href="experience.html">Experience & Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="resume.html">Resume</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="experience.html">Experience & Projects</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
@@ -46,6 +46,24 @@
     		<label for="video-toggle" class="toggle-label"></label>
 	    </div>
     </section>
+
+    <section id="education">
+        <h2>Education</h2>
+        <div class="education-cards">
+            <!-- Education Cards Here -->
+            <div class="card">
+                <h3>Post Graduate Certificate - Business Analytics</h3>
+                <p>Seneca Polytechnic, Toronto, ON | May 2023 - Dec 2023</p>
+                <ul>
+                    <li>GPA: 4.0/4.0, Graduated with High Honours, President's Honours List</li>
+                    <li>Key Courses: Sentiment Analysis, Data Mining, Prediction Models, SAS, Python</li>
+                    <li>Achievements: Awarded President's Honours List for both semesters</li>
+                </ul>
+            </div>
+            <!-- Add more cards as needed -->
+        </div>
+    </section>
+
 <script src="scripts.js"></script>
 </body>
 </html>
