--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- SVG Mask for Flooding Effect -->
+    <svg id="morph-svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+        <path d="M 0 100 Q 50 0 100 100 V 100 H 0 Z" fill="black"></path>
+    </svg>
     <!-- Navbar -->
     <header>
         <nav>
