--- a/index.html
+++ b/index.html
@@ -48,7 +48,30 @@
     <!-- Placeholder for Education Section -->
     <section id="education">
         <h2>Education</h2>
-        <p>Placeholder for Education content.</p>
+        <div class="education-container">
+            <div class="education-list">
+                <div class="education-item" data-details="details-degree1">
+                    Bachelor of Computer Science
+                </div>
+                <div class="education-item" data-details="details-degree2">
+                    Master of Artificial Intelligence
+                </div>
+                <!-- Add more degrees as needed -->
+            </div>
+            <div class="education-details">
+                <div id="details-degree1" class="details">
+                    <h3>Bachelor of Computer Science</h3>
+                    <p>University Name, Year</p>
+                    <p>Relevant coursework, achievements, etc.</p>
+                </div>
+                <div id="details-degree2" class="details">
+                    <h3>Master of Artificial Intelligence</h3>
+                    <p>University Name, Year</p>
+                    <p>Relevant coursework, achievements, etc.</p>
+                </div>
+                <!-- Add more details as needed -->
+            </div>
+        </div>
     </section>
 
     <!-- Placeholder for Experience Section -->
