--- a/index.html
+++ b/index.html
@@ -51,22 +51,30 @@
         <div class="education-container">
             <div class="education-list">
                 <div class="education-item" data-details="details-degree1">
-                    Bachelor of Computer Science
+                    Bachelor of Computer Engineering
                 </div>
                 <div class="education-item" data-details="details-degree2">
-                    Master of Artificial Intelligence
+                    Post Graduate in Project Management IT
+                </div>
+                <div class="education-item" data-details="details-degree2">
+                    Post Graduate in Business Analytics
                 </div>
                 <!-- Add more degrees as needed -->
             </div>
             <div class="education-details">
                 <div id="details-degree1" class="details">
-                    <h3>Bachelor of Computer Science</h3>
-                    <p>University Name, Year</p>
+                    <h3>Bachelor of Engineering</h3>
+                    <p>Gujarat Technological University, 2021</p>
                     <p>Relevant coursework, achievements, etc.</p>
                 </div>
                 <div id="details-degree2" class="details">
-                    <h3>Master of Artificial Intelligence</h3>
-                    <p>University Name, Year</p>
+                    <h3>Post Graduate in Project Management IT</h3>
+                    <p>Seneca College, 2022</p>
+                    <p>Relevant coursework, achievements, etc.</p>
+                </div>
+                <div id="details-degree3" class="details">
+                    <h3>Post Graduate in Business Analytics</h3>
+                    <p>Seneca College, 2023</p>
                     <p>Relevant coursework, achievements, etc.</p>
                 </div>
                 <!-- Add more details as needed -->
