--- a/index.html
+++ b/index.html
@@ -51,13 +51,7 @@
         <div class="education-container">
             <div class="education-list">
                 <div class="education-item" data-details="details-degree1">
-                    <div class="degree-info">
-                        <h3>Bachelor of Computer Engineering</h3>
-                        <p>Gujarat Technological University, Gujarat, India</p>
-                    </div>
-                    <div class="degree-type">
-                        <p>2017-2021</p>
-                    </div>
+                    Bachelor of Computer Engineering
                 </div>
                 <div class="education-item" data-details="details-degree2">
                     Post Graduate in Project Management IT
