--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
         </div>
     </section>
 
+	<section id="bento-grid" class="bento-grid-container">
+	    <div class="grid-item grid-item-education">Education</div>
+	    <div class="grid-item grid-item-experience">Experience</div>
+	    <div class="grid-item grid-item-projects">Projects</div>
+	    <div class="grid-item grid-item-achievements">Achievements & Certifications</div>
+	    <div class="grid-item grid-item-resume">Resume</div>
+	    <div class="grid-item grid-item-contact">Contact</div>
+	</section>
+
     <!-- Placeholder for Education Section -->
     <section id="education">
         <h2>Education</h2>
