--- a/index.html
+++ b/index.html
@@ -46,7 +46,23 @@
     </section>
 
 	<section id="bento-grid" class="bento-grid-container">
-	    <div class="grid-item grid-item-education">Education</div>
+	    <div class="grid-item grid-item-education">
+		<div id="details-degree1" class="details">
+			    <h3>Bachelor of Engineering</h3>
+			    <p>Gujarat Technological University, 2021</p>
+			    <p>Relevant coursework, achievements, etc.</p>
+		</div>
+		<div id="details-degree2" class="details">
+			    <h3>Post Graduate in Project Management IT</h3>
+			    <p>Seneca College, 2022</p>
+			    <p>Relevant coursework, achievements, etc.</p>
+		</div>
+		<div id="details-degree3" class="details">
+			    <h3>Post Graduate in Business Analytics</h3>
+			    <p>Seneca College, 2023</p>
+			    <p>Relevant coursework, achievements, etc.</p>
+		</div>
+	    </div>
 	    <div class="grid-item grid-item-experience">Experience</div>
 	    <div class="grid-item grid-item-projects">Projects</div>
 	    <div class="grid-item grid-item-achievements">Achievements & Certifications</div>
