--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 
 	<section id="bento-grid" class="bento-grid-container">
 	    <div class="grid-item grid-item-education">
-		<div id="details-degree1" class="details">
+		<div id="details-degree" class="detail">
 			    <h3>Bachelor of Engineering</h3>
 			    <p>Gujarat Technological University, 2021</p>
 			    <p>Relevant coursework, achievements, etc.</p>
 		</div>
-		<div id="details-degree2" class="details">
+		<div id="details-degree" class="detail">
 			    <h3>Post Graduate in Project Management IT</h3>
 			    <p>Seneca College, 2022</p>
 			    <p>Relevant coursework, achievements, etc.</p>
 		</div>
-		<div id="details-degree3" class="details">
+		<div id="details-degree" class="detail">
 			    <h3>Post Graduate in Business Analytics</h3>
 			    <p>Seneca College, 2023</p>
 			    <p>Relevant coursework, achievements, etc.</p>
